# OpenLandscapeStacker

./: .gitignore  CMakeLists.txt  Readme.md
lang/: OLS_en_US.ts
src/: CMakeLists.txt  main.cpp
src/core/: frame.cpp  frame.h  frame_store.cpp  frame_store.h  settings.h  stack_manager.cpp  stack_manager.h
src/core/util/: filesystem.cpp  filesystem.h
src/ui/: main_window.cpp  main_window.h
src/ui/models/: frame_item.h  frame_tree_nodes.h
src/ui/widgets/: preview.cpp  preview.h  sidebar.cpp  sidebar.h
